<resources>
    <!--<string name="ip_set">http://122.34.12.104</string>-->
<!--    <string name="ip_set">https://cna-server.run.goorm.io</string>-->
    <string name="ip_set">http://server.cnaplus.shop</string>
    <string name="web_ip_set">http://www.cnaplus.shop</string>
    <string name="admob_app_id">ca-app-pub-2774747966830250~5467102140</string>
    <string name="banner_ad_unit_id">ca-app-pub-2774747966830250/5322880887</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">오답노트</string>
    <string name="title_home">홈</string>
    <string name="title_graph">분석</string>
    <string name="title_test">시험</string>
    <string name="title_profile">설정</string>
    <string name="title_test_1">시험</string>
    <string name="title_test_2">결과</string>
    <string name="noti_activity_title">알림</string>
    <string name="btn_complete">완료</string>
    <string name="btn_cancel">취소</string>
    <string name="et_content">내용을 간략하게 적어주세요.</string>
    <string name="lose_pw">비밀번호를 잃어버리셨나요?</string>
    <string name="login_email">이메일로 로그인</string>
    <string name="login_google">google 계정으로 계속하기</string>
    <string name="signup_msg">회원가입</string>
    <string name="sign_up_msg2">비밀번호는 대문자와 숫자와 특수문자(!@.#$%^&amp;*?_~)를 포함하는 4~12자로 해주세요.</string>
    <string name="str_ver"><u>Application</u></string>
    <string name="str_abouts"><u>Abouts</u></string>
    <string name="str_account"><u>Account</u></string>
    <string name="str_setting"><u>Setting</u></string>
    <string name="setting">설정</string>
    <string name="tv_title_dialog_1">학년을 선택해 주세요.</string>
    <string name="tv_title_dialog_2">자동으로 학년별 단원 업데이트가 가능해요 !</string>
    <string name="tv_title_dialog_3">쿠폰 코드 입력</string>
    <string name="tv_title_dialog_4">단원을 선택해 주세요!</string>
    <string name="tv_title_dialog_5">단원은 하나만 선택이 가능해요 !</string>
    <string name="et_code_dialog">쿠폰 코드 입력</string>
    <string name="tv_profile">프로필 설정</string>
    <string name="tv_logout">로그아웃</string>
    <string name="tv_signout">회원탈퇴</string>
    <string name="tv_wifisync">Wifi가 연결 되어 있을 때만 동기화하기</string>
    <string name="tv_privacy">개인정보처리방침</string>
    <string name="tv_terms">이용약관</string>
    <string name="tv_str_ver">현재 버전 : </string>
    <string name="btn_ok">확인</string>
    <string name="btn_editor">편집</string>
    <string name="btn_camera">카메라</string>
    <string name="btn_gallery">갤러리</string>
    <string name="tv_title_addnote">CnA+</string>
    <string name="tv_title_addnote2">오답노트</string>
    <string name="tv_time_out">00:00:00</string>
    <string name="et_hint_email">이메일</string>
    <string name="et_hint_pw">비밀번호</string>
    <string name="et_hint_pw_confirm">비밀번호 확인</string>
    <string name="tv_title_modify">단원명</string>
    <string name="tv_title_prob">문제명</string>
    <string name="tv_title_chart">문제 분석</string>
    <string name="et_insert">단원 선택</string>
    <string name="prob">문제</string>
    <string name="prob_2">A Problem</string>
    <string name="solv">해설</string>
    <string name="solv_2">A Solution</string>
    <string name="btn_next_prob">다음문제</string>
    <string name="btn_prob_ok">정답</string>
    <string name="btn_prob_x">오답</string>
    <string name="tv_title_camera">오답노트 사진</string>
    <string name="tv_do_exam_title">단원명</string>
    <string name="tv_count">문항수</string>
    <string name="tv_time">시험시간</string>
    <string name="tv_time_detail">시간</string>
    <string name="btn_start">시험 시작</string>
    <string name="tv_class">학년</string>
    <string name="tv_loading">Loading..</string>
    <string name="tv_test">Wrong Answer Notes</string>
    <string name="tv_take_photo">촬영을 선택하세요!</string>
    <string name="dialog_btn_ok">예</string>
    <string name="dialog_btn_cancel">아니오</string>
</resources>
