<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_ver"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/str_ver" />

    <TextView
        android:id="@+id/tv_str_ver"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_ver"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/tv_str_ver" />

    <TextView
        android:id="@+id/tv_abouts"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_str_ver"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/str_abouts" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_abouts"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/tv_terms" />

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_terms"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/tv_privacy" />

    <TextView
        android:id="@+id/tv_account"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_privacy"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/str_account" />
    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_account"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/tv_profile" />
    <Switch
        android:id="@+id/sw_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="55dp"
        android:layout_below="@+id/tv_account"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:checked="false"/>
    <TextView
        android:id="@+id/tv_insert_code"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_profile"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/et_code_dialog" />
    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_insert_code"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/tv_logout" />
    <TextView
        android:id="@+id/tv_signout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_logout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/tv_signout" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_signout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/str_setting"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_wifisync"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_setting"
        android:layout_alignStart="@+id/sw_wifisync"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/sw_wifisync"
        android:text="@string/tv_wifisync" />

    <Switch
        android:id="@+id/sw_wifisync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="55dp"
        android:layout_below="@+id/tv_setting"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:checked="false"/>
</RelativeLayout>