<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_ver"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/nanum_gothic"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_ver" />
        <TextView
            android:id="@+id/tv_str_ver"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_ver"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tv_str_ver"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_abouts"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_str_ver"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/str_abouts"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_abouts"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/tv_terms"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_terms"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/tv_privacy"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_account"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_privacy"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/str_account"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_account"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/tv_profile"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_insert_code"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_profile"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/et_code_dialog"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_insert_code"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/tv_logout"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_signout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_logout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/tv_signout"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_signout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/str_setting"
            android:textStyle="bold"
            android:fontFamily="@font/nanum_gothic"/>
        <TextView
            android:id="@+id/tv_wifisync"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_setting"
            android:layout_alignStart="@+id/sw_wifisync"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/sw_wifisync"
            android:text="@string/tv_wifisync"
            android:fontFamily="@font/nanum_gothic"/>
        <Switch
            android:id="@+id/sw_wifisync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="55dp"
            android:layout_below="@+id/tv_setting"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:checked="false"/>
    </RelativeLayout>
</ScrollView>
