<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="40dp"
    android:layout_width="wrap_content"
    android:layout_height="450dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/nanum_gothic"
        android:text="@string/tv_title_dialog_4" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/nanum_gothic"
        android:text="@string/tv_title_dialog_5" />

    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_marginTop="20dp"
        android:groupIndicator="@null"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </ExpandableListView>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lvExp"
        android:fontFamily="@font/nanum_gothic"
        android:text="@string/btn_cancel"/>
</RelativeLayout>