<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:gravity="left"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/nanum_gothic"
        android:text="@string/tv_title_camera" />
    <TextView
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:fontFamily="@font/nanum_gothic"
        android:text="@string/btn_gallery"
        android:gravity="left|center"
        android:textColor="#000000"
        android:textStyle="normal"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:fontFamily="@font/nanum_gothic"
        android:text="@string/btn_camera"
        android:gravity="left|center"
        android:textColor="#000000"
        android:textStyle="normal"
        android:textSize="15sp" />
</LinearLayout>