<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_alignParentTop="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:textStyle="bold"
                android:fontFamily="@font/nanum_gothic"
                android:text="@string/tv_title_addnote" />
            <TextView
                android:id="@+id/tv_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/tv_title"
                android:fontFamily="@font/nanum_gothic"
                android:text="@string/tv_title_addnote2" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/btn_cancel"
            android:src="@drawable/ic_back_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:textSize="10pt"
            android:fontFamily="@font/nanum_gothic"
            android:text="@string/btn_complete" />
    </RelativeLayout>

</android.support.v7.widget.Toolbar>