<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/Top"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <RelativeLayout
                android:id="@+id/set_image"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#9E9E9E"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera" />
                <TextView
                    android:id="@+id/tv_1"
                    android:layout_below="@id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prob"/>
            </RelativeLayout>
            <LinearLayout
                android:background="#000000"
                android:layout_width="2dp"
                android:layout_height="match_parent"/>
            <RelativeLayout
                android:id="@+id/set_image2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#BDBDBD"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera" />
                <TextView
                    android:id="@+id/tv_2"
                    android:layout_below="@id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solv"/>
            </RelativeLayout>
        </LinearLayout>

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar_note"/>
        <LinearLayout
            android:id="@+id/linear"
            android:layout_below="@+id/Top"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_title_modify"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <EditText
                android:id="@+id/et_class"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/et_insert"
                android:inputType="number"
                android:textSize="20sp"/>
        </LinearLayout>


        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="left|top"
            android:hint="@string/et_content"
            android:inputType="textMultiLine"
            android:lines="15"
            android:maxLines="15"
            android:minLines="1"
            android:textSize="20sp" />
    </RelativeLayout>
</ScrollView>