<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/nanum_gothic"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:fontFamily="@font/nanum_gothic"
            android:hint="@string/et_hint_email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/nanum_gothic"
        android:textStyle="normal"
        android:textSize="15sp"/>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btn_ok"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/nanum_gothic"
            android:text="@string/dialog_btn_cancel"/>
        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/nanum_gothic"
            android:text="@string/dialog_btn_ok"/>
    </RelativeLayout>
</LinearLayout>